force-app/main/default/objects/Three_Dimensional_Asset__c/Three_Dimensional_Asset__c.object-meta.xml
<CustomObject>
    <label>Three Dimensional Asset</label>
    <nameField>
        <label>3D Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Three Dimensional Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>