force-app/main/default/objects/Three_Dimensional_Asset__c/fields/Asset_Description__c.field-meta.xml
<CustomField>
    <fullName>Asset_Description__c</fullName>
    <label>Asset Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>