force-app/main/default/objects/Three_Dimensional_Asset__c/fields/Asset_Rich_Text__c.field-meta.xml
<CustomField>
    <fullName>Asset_Rich_Text__c</fullName>
    <label>Asset Rich Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>