force-app/main/default/objects/Three_Dimensional_Asset__c/fields/Asset_URL__c.field-meta.xml
<CustomField>
    <fullName>Asset_URL__c</fullName>
    <description>URL to the interactive 3D scene/asset.</description>
    <inlineHelpText>URL to the interactive 3D scene/asset.</inlineHelpText>
    <label>Asset URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>